Add solib support for CHERI-RTEMS and CheriFreeRTOS
This is originally derived from git@github.com:MrVan/gdb.git dating back to
2013. It is adapted to work with C++ and new GDB, added support for CHERI.
It is a WIP but functional enough to debug dynamically loaded relocatable objects.

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -779,6 +779,8 @@ ALL_TARGET_OBS = \
 	solib-frv.o \
 	solib-spu.o \
 	solib-svr4.o \
+	riscv-rtems-tdep.o \
+	solib-rtems.o \
 	sparc-linux-tdep.o \
 	sparc-nbsd-tdep.o \
 	sparc-obsd-tdep.o \
@@ -1381,6 +1383,7 @@ HFILES_NO_SRCDIR = \
 	solib-darwin.h \
 	solib-spu.h \
 	solib-svr4.h \
+	solib-rtems.h \
 	solib-target.h \
 	solist.h \
 	source.h \
@@ -2323,6 +2326,8 @@ ALLDEPFILES = \
 	solib-aix.c \
 	solib-spu.c \
 	solib-svr4.c \
+	solib-rtems.c \
+	riscv-rtems-tdep.c \
 	sparc-linux-nat.c \
 	sparc-linux-tdep.c \
 	sparc-nat.c \
